added view covid and covidcontroller

--- a/IngmanDevelopment/Views/Home/Index.cshtml
+++ b/IngmanDevelopment/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
             <ul>
                 <li class="current"><a href="index">Home</a></li>
                 <li><a href="about">About</a></li>
+                <li><a href="covid">Covid-19</a></li>
                 <li><a href="http://www.movieinfo.ingmandev.se">MovieSearch</a></li>
                 <li><a href="http://www.reloading.ingmandev.se">Reloading</a></li>
             </ul>
