Added dropdwn menu and submit button

--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -5,7 +5,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index">Home</a></li>
+                <li><a href="home">Home</a></li>
                 <li class="current"><a href="about">About</a></li>
                 <li><a href="covid">Covid-19</a></li>
                 <li><a href="http://www.movieinfo.ingmandev.se">MovieSearch</a></li>
