--- a/IngmanDevelopment/Views/Home/Index.cshtml
+++ b/IngmanDevelopment/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
         </div>
         <nav>
             <ul>
-                <li class="current"><a href="index">Home</a></li>
+                <li class="current"><a href="home">Home</a></li>
                 <li><a href="about">About</a></li>
                 <li><a href="covid">Covid-19</a></li>
                 <li><a href="http://www.movieinfo.ingmandev.se">MovieSearch</a></li>
