--- a/IngmanDevelopment/wwwroot/css/stilmall.css
+++ b/IngmanDevelopment/wwwroot/css/stilmall.css
@@ -114,6 +114,27 @@ header a:hover {
     margin: auto;
 }
 
+/*ShowcaseCovid*/
+#showcaseCovid {
+    background: url('../images/covid-19.jpg') no-repeat;
+    height: 500px;
+    background-size: cover;
+    border-bottom: black 3px solid;
+}
+
+#covid .container {
+    min-height: 200px;
+    font-size: 20px;
+    font-family: Arial;
+}
+
+#covid .countries {
+    min-width: 200px;
+}
+
+#btnSubmit {
+    background-color: red;
+}
 /*boxes*/
 #boxes {
     margin-top: 20px;
