--- a/IngmanDevelopment/Views/Shared/_Layout.cshtml
+++ b/IngmanDevelopment/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link href="~/css/stilmall.css" rel="stylesheet" />
 </head>
 <body>
-    @RenderBody();
+    @RenderBody()
     <footer>
         <p>Morten Ingman, Copyright &copy; 2020<br>morten.ingman@ingmandev.se</p>
     </footer>
