Added view and controller for github

--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -7,6 +7,7 @@
             <ul>
                 <li><a href="home">Home</a></li>
                 <li class="current"><a href="about">About</a></li>
+                <li><a href="github">Github</a></li>
                 <li><a href="covid">Covid-19</a></li>
                 <li><a href="http://www.movieinfo.ingmandev.se">MovieSearch</a></li>
                 <li><a href="http://www.reloading.ingmandev.se">Reloading</a></li>
