--- a/IngmanDevelopment/Views/_ViewImports.cshtml
+++ b/IngmanDevelopment/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using IngmanDevelopment
-@using IngmanDevelopment.Models
+@using System.Data
+@using IngmanDevelopment.Models.DTO
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
