--- a/IngmanDevelopment/Views/Github/Index.cshtml
+++ b/IngmanDevelopment/Views/Github/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<header>
+﻿@model IEnumerable<ReposDTO>
+
+<header>
     <div class="container">
         <div id="brand">
             <h1><span class="highlight">Ingman</span> Development</h1>
@@ -15,3 +17,17 @@
         </nav>
     </div>
 </header>
+<section id="repos">
+    <div class="reposContainer">
+        <h1>Repositories</h1>
+        
+            @foreach (var repo in Model)
+            {
+               
+                <p>@Html.DisplayFor(item => repo.html_url)</p>
+
+                
+            }
+
+        </div>
+</section>
