Added Data folder and more

--- a/IngmanDevelopment/Views/_ViewImports.cshtml
+++ b/IngmanDevelopment/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using IngmanDevelopment
 @using System.Data
 @using IngmanDevelopment.Models.DTO
+@using IngmanDevelopment.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
