Added formHandler.js and modified  _Layout

--- a/IngmanDevelopment/Views/Shared/_Layout.cshtml
+++ b/IngmanDevelopment/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
             <p>Morten Ingman, Copyright &copy; 2020<br>morten.ingman@ingmandev.se</p>
         </footer>
     </div>
+    @RenderSection("Scripts", required:false)
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="~/js/main.js"></script>
 </body>
