Commented away some at the moment unused code.

--- a/IngmanDevelopment/Views/Github/Index.cshtml
+++ b/IngmanDevelopment/Views/Github/Index.cshtml
@@ -20,14 +20,15 @@
 <section id="repos">
     <div class="reposContainer">
         <h1>Repositories</h1>
+        <h3></h3>
         
-            @foreach (var repo in Model)
+            @*@foreach (var repo in Model)
             {
                
                 <p>@Html.DisplayFor(item => repo.html_url)</p>
 
                 
-            }
+            }*@
 
         </div>
 </section>
