Fixat till Githubsidan

--- a/IngmanDevelopment/Views/Github/Index.cshtml
+++ b/IngmanDevelopment/Views/Github/Index.cshtml
@@ -20,7 +20,9 @@
 <section id="repos">
     <div class="reposContainer">
         <h1>Repositories</h1>
-        <h3></h3>
+        <p>När jag har tid att fixa det, kommer jag hämta in lite repos med hjälp av api från Github här, men till dess får man nöja sig med nedanstående länk.</p>
+        <h3><a href="https://github.com/Ingman-dev">Github</a></h3>
+        
         
             @*@foreach (var repo in Model)
             {
