--- a/IngmanDevelopment/wwwroot/css/stilmall.css
+++ b/IngmanDevelopment/wwwroot/css/stilmall.css
@@ -173,7 +173,7 @@ header a:hover {
 }
 
 /* Sidebar */
-/*aside#sidebar{
+aside#sidebar{
     float: right;
     width: 30%;
     margin-top: 10px;
@@ -182,7 +182,7 @@ header a:hover {
 aside#sidebar .quote input, aside#sidebar .quote textarea {
     width: 90%;
     padding: 5px;
-}*/
+}
 
 /* Main-col */
 article#main-col {
