--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -21,19 +21,30 @@
             <h1 class="page-title"></h1>
             <ul id="services">
                 <li>
-                    <h3>Something</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et sem eu tellus bibendum scelerisque. Curabitur blandit ante nulla, pellentesque dictum est molestie at. Ut lacinia finibus iaculis. Sed mauris metus, sagittis quis interdum vel, blandit ut nibh. Phasellus felis ipsum, scelerisque sed elementum nec, porta ac magna.</p>
-                    <p>Nullam sed auctor dolor, id vestibulum massa. Nam ut dignissim lacus. Ut quam velit, volutpat vitae consequat eget, venenatis eget libero. Duis nec neque sed purus dapibus varius. Ut et lectus urna. Donec eleifend blandit sem, sit amet aliquam est lacinia eget. Integer placerat risus id ipsum efficitur mattis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <h3>Om webbsidan.</h3>
+                    <p>
+                        Mitt nam är Morten och jag studerar tredje terminen på informatikprogrammet på Mittuniversitetet. 
+                        Jag har byggt denna webbsida i Visual Studio och ASP.NET core med hjälp av html, css, javascript och C#. 
+                        Arbetet med den påbörjades när jag genomförde min kurs i interaktiva webbapplikationer, under den kursen använde sig 
+                        vår föreläsare av ett api som hämtade in statistik över länders rapportering av Covid-19. Då jag ansåg att det kändes 
+                        aktuellt just nu så valde jag att använda mig av det på min sida också.
+                    </p>
+                    <p>
+                        MovieSearch har jag byggt uteslutande med html, css och javascript och där använder jag mig också av ett api, 
+                        som hämtar in information om filmer från Open Movie Database. Denna webbsida ligger på en subdomän, som jag helt enkelt länkat till.<br />
+                        Reloading ligger också på en subdomän och är ett av projekten vi fick göra i kursen, den är skapat helt och hållet med html och css 
+                        och har inte någon interaktivitet.
+                    </p>
                 </li>
                 <li>
-                    <h3>Something else</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et sem eu tellus bibendum scelerisque. Curabitur blandit ante nulla, pellentesque dictum est molestie at. Ut lacinia finibus iaculis. Sed mauris metus, sagittis quis interdum vel, blandit ut nibh. Phasellus felis ipsum, scelerisque sed elementum nec, porta ac magna.</p>
-                    <p>Nullam sed auctor dolor, id vestibulum massa. Nam ut dignissim lacus. Ut quam velit, volutpat vitae consequat eget, venenatis eget libero. Duis nec neque sed purus dapibus varius. Ut et lectus urna. Donec eleifend blandit sem, sit amet aliquam est lacinia eget. Integer placerat risus id ipsum efficitur mattis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <h3>This is a headline.</h3>
+                    <p>This is a paragraph.</p>
+                    <p>This is just another paragraph.</p>
                 </li>
                 <li>
-                    <h3>Something other than the previous</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et sem eu tellus bibendum scelerisque. Curabitur blandit ante nulla, pellentesque dictum est molestie at. Ut lacinia finibus iaculis. Sed mauris metus, sagittis quis interdum vel, blandit ut nibh. Phasellus felis ipsum, scelerisque sed elementum nec, porta ac magna.</p>
-                    <p>Nullam sed auctor dolor, id vestibulum massa. Nam ut dignissim lacus. Ut quam velit, volutpat vitae consequat eget, venenatis eget libero. Duis nec neque sed purus dapibus varius. Ut et lectus urna. Donec eleifend blandit sem, sit amet aliquam est lacinia eget. Integer placerat risus id ipsum efficitur mattis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <h3>This is a headline.</h3>
+                    <p>This is a paragraph.</p>
+                    <p>This is just another paragraph.</p>
                 </li>
             </ul>
         </article>
@@ -56,6 +67,7 @@
                     Software Development Project, 7.5 credits<br>
                     Interactive Web Applications, 7.5 credits<br>
                     Information System Analysis And Design, 15 credits<br>
+                    Scientific methodology, 7.5 credits<br>
                     AI The basics of Artificial Intelligens, 2.0 credits<br>
                     Cicuit Theory DC-cicuits, 2.0 credits<br>
                     Digital Electronics With PLC, 3.5 credits<br>
