Edited some information

--- a/IngmanDevelopment/Views/Home/Index.cshtml
+++ b/IngmanDevelopment/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
             <h3>HTML5</h3>
             <p>
                 HTML står för HyperText Markup Language.<br>
-                Det används för att märka upp de olika element som en website består av.
+                Det används för att märka upp de olika element som en webbsida består av, man kan säga att man bygger sidans stomme med HTML.
             </p>
         </div>
         <div class="box">
@@ -46,15 +46,15 @@
             <h3>CSS3</h3>
             <p>
                 CSS står för Cascading Style Sheet.<br>
-                Med CSS skapar man designen och utseendet på websiten.
+                Med CSS skapar man designen och utseendet på webbsidan, detta är den estetiska biten. Det är med CSS vi bland annat bestämmer bakgrundsfärger, textstorlekar, typsnitt och placeringar av de olika elementen.
             </p>
         </div>
         <div class="box">
             <img src="images/javascript.png">
             <h3>Javascript</h3>
             <p>
-                JavaScript är ett skriptspråk<br>
-                Det används för att skapa funktioner för websiter som användaren kan interagera med.
+                JavaScript är ett skriptspråk.<br>
+                Det används för att skapa funktioner för webbsidor så att användaren kan interagera med sidan, till skillnad från HTML och CSS så är Javascript ett programmeringsspråk.
             </p>
         </div>
     </div>
@@ -64,7 +64,7 @@
             <h3>C#</h3>
             <p>
                 C# är ett programmeringsspråk<br>
-                Det är objektorienterat och utvecklat av Microsoft för ramverket .NET.
+                Det ett så kallat högnivåspråk som är objektorienterat och utvecklat av Microsoft för ramverket .NET.
 
             </p>
         </div>
@@ -73,7 +73,7 @@
             <h3>PostgreSQL</h3>
             <p>
                 PostgreSQL är en databashanterare<br>
-                Detta är världens mest avancerade databashanterare som är byggd på öppen källkod.
+                Detta är en av världens mest avancerade databashanterare som är byggd på öppen källkod.
 
             </p>
         </div>
@@ -82,7 +82,7 @@
             <h3>Java</h3>
             <p>
                 Java är ett programmeringsspråk<br>
-                Det är objektorienterat och konstuerades av Sun Microsystems.
+                Det ett högnivåspråk som är objektorienterat och konstuerades av Sun Microsystems. Java och Javascript har dock ingenting med varandra att göra.
 
             </p>
         </div>
