--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -37,14 +37,39 @@
                     </p>
                 </li>
                 <li>
-                    <h3>This is a headline.</h3>
-                    <p>This is a paragraph.</p>
-                    <p>This is just another paragraph.</p>
+                    <h3>Vem är jag?</h3>
+                    <p>
+                        Jag bor i centrala Östersund med min sambo Ann-Charlotte och vår dvärgschnauzer Gulliver. 
+                        Jag har två döttrar på 20 respektive 17 år, den äldre är utflugen ur boet och den yngre bor på annan ort hos sin mor. 
+                        Bland mina största intressen hittar vi jakt, fiske, friluftsliv och givetvis min familj. 
+                        God mat och dryck ligger mig också varmt om hjärtat tillsammans med resor och upplevelser. 
+                        Jag är också intresserad av programmering och systemutveckling, så jag har valt helt rätt utbildning om än något sent i livet. 
+                    </p>
+                    <p>
+                        Jag är född i Trondheim men uppvuxen i Östersund. I mina ungdomsår så lyste tydliga framtidsplaner och förnuft med sin frånvaro, 
+                        så jag började arbeta direkt efter grundskolan och har sedan dess arbetat med allt möjligt. En konsekvens av det var ju att jag började få svårt att komma vidare på arbetsfronten 
+                        när de formella kraven för anställning ökade. Jag insåg att jag behövde läsa in gymnasiet för att  ha någon möjlighet att komma vidare på arbetsmarknaden. 
+                        När jag läste in gymnasiet kände jag att jag ville skaffa mig en högre utbildning, så jag skrev högskoleprovet också och fick ett tillfredställande resultat. 
+                        Detta ledde i sin tur till att jag nu som 40-plussare är student på Mittuniversitetet och har samlat på mig en bunt med högskolepoäng. Om planen fortsätter löpa så 
+                        som den löpt på hittills, så räknar jag med att ha en kandidatexamen i Informatik med inriktning systemutveckling när höstterminen 2021 är slut.
+                    </p>
                 </li>
                 <li>
-                    <h3>This is a headline.</h3>
-                    <p>This is a paragraph.</p>
-                    <p>This is just another paragraph.</p>
+                    <h3>Informatik med inriktning systemutveckling.</h3>
+                    <p>
+                        Det är en utbildning där vi får lära oss allt från de mer teoretiska bitarna i en systemutvecklingsprocess till praktisk programmering. 
+                        Det är mycket fokus på projektarbeten och då med huvudvikt på agila arbetssätt som är mycket vanligt, om inte uteslutande, det som används i branschen. 
+                        Vi har fått prova på de olika rollerna som kan förekomma i ett projekt och vi har fått prova på att skapa interaktiva prototyper med olika verktyg. 
+                        Användartester har vi också fått konstruera och genomföra, för att förbättra vår produkt i iterationer. Kravställning har också ingått i vår utbildning, 
+                        precis som strukturering och prioritering av olika krav. Skillnaden mellan funktionella och icke funktionella krav och att hela tiden försöka ha användbarhet 
+                        som ledord i systemutvecklingsprocessen.
+                    </p>
+                    <p>
+                        C# och .NET ramverket är det språk vi fått lära oss tillsammans med andra tekniker som HTML, CSS och Javascript. Vi har också fått lära oss PostgreSQL 
+                        som är en open source databashanterare. Jag håller också på att lära mig Java vid sidan av mina studier, helt enkelt för att jag tror att jag kan ha nytta av det. 
+                        Jag upplever att ju mer jag lär mig, desto mer inser jag hur mycket mer det finns att lära. Jag trivs mycket bra med mitt val av utbildning, dels för att den är oerhört intressant 
+                        men också för att det aldrig kommer ta slut på utvecklingsmöjligheter i den bransch jag ska ge mig in i efter utbildningen. Möjligheterna är oändliga i en bransch där inte ens fantasin sätter gränser.
+                    </p>
                 </li>
             </ul>
         </article>
