changed a string in js

--- a/IngmanDevelopment/Views/Home/Index.cshtml
+++ b/IngmanDevelopment/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 </header>
 <section id="showcase">
     <div class="container">
-        <h1>Curriculum vitae under construction</h1>
+        <h1>Curriculum vitae under kontinuerlig utveckling</h1>
         <article class="information">
             <div>
                 <p>
