--- a/IngmanDevelopment/Views/Shared/_Layout.cshtml
+++ b/IngmanDevelopment/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <meta name="author" content="Morten Ingman">
     <title>Ingman Development</title>
     <link href="~/css/stilmall.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="~/images/favicon.ico"/>
 </head>
 <body>
     @RenderBody()
