--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<header>
     <div class="container">
         <div id="brand">
-            <h1><span class="highlight">Ingman</span> Development</h1>
+            <h1><span class="highlight">Morten</span> Ingman</h1>
         </div>
         <nav>
             <ul>
