Translated to swedish

--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -33,7 +33,7 @@
                         MovieSearch har jag byggt uteslutande med html, css och javascript och där använder jag mig också av ett api,
                         som hämtar in information om filmer från Open Movie Database. Denna webbsida ligger på en subdomän, som jag helt enkelt länkat till.<br />
                         Reloading ligger också på en subdomän och är ett av projekten vi fick göra i kursen, den är skapat helt och hållet med html och css
-                        och har inte någon interaktivitet.
+                        så den är helt statisk och har ingen interaktivitet.
                     </p>
                 </li>
                 <li>
@@ -91,24 +91,27 @@
 
         <aside id="sidebar">
             <div class="dark">
-                <h1>My education</h1>
+                <h1>Min utbildning så långt.</h1>
                 <p>
-                    My courses so far at the faculty of computer science and informatics is:<br>
-                    Projectbased Introduction To Engineering, 7.5 credits<br>
-                    Computersystems And Programming, 7.5 credits<br>
-                    Introduction To Energy Systems, 7.5 credits<br>
-                    Electrical Machinery And Drives, 7.5 credits<br>
-                    User-centered Systems Design, 7.5 credits<br>
-                    Informatics And System Science, 7.5 credits<br>
-                    Problem-oriented Software Development, 7.5 credits<br>
-                    Distributed Projects, 7.5 credits<br>
-                    Human Computer Interaction, 7.5 credits<br>
-                    Datamodelling And Databases, 7.5 credits<br>
-                    Software Development Project, 7.5 credits<br>
-                    Interactive Web Applications, 7.5 credits<br>
-                    Information System Analysis And Design, 15 credits<br>
-                    Scientific methodology, 7.5 credits<br>
+                    <h4>Informatik</h4>
+                    Användarcentrerad systemutveckling, 7.5 credits<br>
+                    Informatik och systemvetenskap, 7.5 credits<br>
+                    Problemorienterad programutveckling, 7.5 credits<br>
+                    Arbeta i distribuerade projekt, 7.5 credits<br>
+                    Människa-dator-interaktion, 7.5 credits<br>
+                    Datamodellering och databaser, 7.5 credits<br>
+                    Systemutvecklingsprojekt, 7.5 credits<br>
+                    Interaktiva webbapplikationer, 7.5 credits<br>
+                    Analys och design av informationssystem, 15 credits<br>
+                    Vetenskaplig metod, 7.5 credits<br>
+                    <h4>Datateknik</h4>
+                    Datorsystem och programmering, 7.5 credits<br>
                     AI The basics of Artificial Intelligens, 2.0 credits<br>
+                    <h4>Energiteknik</h4>
+                    Projektbaserad introduktion till ingenjörsarbete, 7.5 credits<br>
+                    Introduktion till energisystem, 7.5 credits<br>
+                    <h4>Elektroteknik</h4>
+                    Elmaskiner och drivsystem, 7.5 credits<br>
                     Cicuit Theory DC-cicuits, 2.0 credits<br>
                     Digital Electronics With PLC, 3.5 credits<br>
                 </p>
