--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -91,7 +91,7 @@
 
         <aside id="sidebar">
             <div class="dark">
-                <h1>Min utbildning så långt.</h1>
+                <h1>Min utbildning så långt:</h1>
                 <p>
                     <h4>Informatik</h4>
                     Användarcentrerad systemutveckling, 7.5 credits<br>
