--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -112,8 +112,8 @@
                     Introduktion till energisystem, 7.5 credits<br>
                     <h4>Elektroteknik</h4>
                     Elmaskiner och drivsystem, 7.5 credits<br>
-                    Cicuit Theory DC-cicuits, 2.0 credits<br>
-                    Digital Electronics With PLC, 3.5 credits<br>
+                    Ellära likströmsnät, 3.5 credits<br>
+                    Digitalteknik med PLC, 3.5 credits<br>
                 </p>
             </div>
             <div class="dark">
