--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -117,25 +117,25 @@
                 </p>
             </div>
             <div class="dark">
-                <h3>Contact</h3>
+                <h3>Kontakt</h3>
                 <form method="POST" class="contact">
                     <div>
-                        <label>Name</label><br>
-                        <input class="inputfields" type="text" placeholder="Name" required>
+                        <label>Namn</label><br>
+                        <input class="inputfields" type="text" placeholder="Namn..." required>
                     </div>
                     <div>
-                        <label>Email</label><br>
-                        <input class="inputfields" type="email" placeholder="Email adress" required>
+                        <label>E-post</label><br>
+                        <input class="inputfields" type="email" placeholder="E-post..." required>
                     </div>
                     <div>
-                        <label>Subject</label><br>
-                        <input class="inputfields" type="text" placeholder="Subject" required>
+                        <label>Ämne</label><br>
+                        <input class="inputfields" type="text" placeholder="Ämne..." required>
                     </div>
                     <div>
-                        <label>Message</label><br>
-                        <textarea id="textarea" placeholder="Message"></textarea>
+                        <label>Meddelande</label><br>
+                        <textarea id="textarea" placeholder="Mddelande..."></textarea>
                     </div>
-                    <button class="btn_1" type="submit">Send</button>
+                    <button class="btn_1" type="submit">Skicka</button>
                 </form>
 
             </div>
