--- a/IngmanDevelopment/Views/Shared/_Layout.cshtml
+++ b/IngmanDevelopment/Views/Shared/_Layout.cshtml
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf8">
     <meta name="viewport" content="width = device-width, initial-scale=1.0">
-    <meta name="description" content="Ingman Development">
+    <meta name="description" content="Morten Ingman | CV">
     <meta name="author" content="Morten Ingman">
-    <title>Ingman Development</title>
+    <title>Morten Ingman | CV</title>
     <link href="~/css/stilmall.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="~/images/favicon.ico"/>
 </head>
