--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -94,26 +94,26 @@
                 <h1>Min utbildning så långt vid Mittuniversitetet och Linköpings universitet:</h1>
                 <p>
                     <h4>Informatik</h4>
-                    Användarcentrerad systemutveckling, 7.5 credits<br>
-                    Informatik och systemvetenskap, 7.5 credits<br>
-                    Problemorienterad programutveckling, 7.5 credits<br>
-                    Arbeta i distribuerade projekt, 7.5 credits<br>
-                    Människa-dator-interaktion, 7.5 credits<br>
-                    Datamodellering och databaser, 7.5 credits<br>
-                    Systemutvecklingsprojekt, 7.5 credits<br>
-                    Interaktiva webbapplikationer, 7.5 credits<br>
-                    Analys och design av informationssystem, 15 credits<br>
-                    Vetenskaplig metod, 7.5 credits<br>
+                    Användarcentrerad systemutveckling, 7.5 hp<br>
+                    Informatik och systemvetenskap, 7.5 hp<br>
+                    Problemorienterad programutveckling, 7.5 hp<br>
+                    Arbeta i distribuerade projekt, 7.5 hp<br>
+                    Människa-dator-interaktion, 7.5 hp<br>
+                    Datamodellering och databaser, 7.5 hp<br>
+                    Systemutvecklingsprojekt, 7.5 hp<br>
+                    Interaktiva webbapplikationer, 7.5 hp<br>
+                    Analys och design av informationssystem, 15 hp<br>
+                    Vetenskaplig metod, 7.5 hp<br>
                     <h4>Datateknik</h4>
-                    Datorsystem och programmering, 7.5 credits<br>
-                    AI The basics of Artificial Intelligens, 2.0 credits<br>
+                    Datorsystem och programmering, 7.5 hp<br>
+                    AI The basics of Artificial Intelligens, 2.0 hp<br>
                     <h4>Energiteknik</h4>
-                    Projektbaserad introduktion till ingenjörsarbete, 7.5 credits<br>
-                    Introduktion till energisystem, 7.5 credits<br>
+                    Projektbaserad introduktion till ingenjörsarbete, 7.5 hp<br>
+                    Introduktion till energisystem, 7.5 hp<br>
                     <h4>Elektroteknik</h4>
-                    Elmaskiner och drivsystem, 7.5 credits<br>
-                    Ellära likströmsnät, 3.5 credits<br>
-                    Digitalteknik med PLC, 3.5 credits<br>
+                    Elmaskiner och drivsystem, 7.5 hp<br>
+                    Ellära likströmsnät, 3.5 hp<br>
+                    Digitalteknik med PLC, 3.5 hp<br>
                 </p>
             </div>
             <div class="dark">
