edited some text

--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -23,7 +23,8 @@
                 <li>
                     <h3>Om webbsidan.</h3>
                     <p>
-                        Mitt nam är Morten och jag studerar tredje terminen på informatikprogrammet på Mittuniversitetet.
+                        Mitt nam är Morten och jag studerar fjärde terminen på informatikprogrammet vid Mittuniversitetet. 
+                        Jag har också läst någon enstaka kurs vid Linköpings unversitet och Luleå tekniska universitet. 
                         Jag har byggt denna webbsida i Visual Studio och ASP.NET core med hjälp av html, css, javascript och C#.
                         Arbetet med den påbörjades när jag genomförde min kurs i interaktiva webbapplikationer, under den kursen använde sig
                         vår föreläsare av ett api som hämtade in statistik över länders rapportering av Covid-19. Då jag ansåg att det kändes
@@ -106,6 +107,7 @@
                     Vetenskaplig metod, 7.5 hp<br>
                     <h4>Datateknik</h4>
                     Datorsystem och programmering, 7.5 hp<br>
+                    Objektorienterad programmering i Java 7.5 hp<br/>
                     AI The basics of Artificial Intelligens, 2.0 hp<br>
                     <h4>Energiteknik</h4>
                     Projektbaserad introduktion till ingenjörsarbete, 7.5 hp<br>
