Added some courses

--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -92,7 +92,7 @@
 
         <aside id="sidebar">
             <div class="dark">
-                <h1>Min utbildning så långt vid Mittuniversitetet och Linköpings universitet:</h1>
+                <h1>Min utbildning så långt vid Mittuniversitetet, Luleå tekniska universitet och Linköpings universitet:</h1>
                 <p>
                     <h4>Informatik</h4>
                     Användarcentrerad systemutveckling, 7.5 hp<br>
@@ -103,11 +103,13 @@
                     Datamodellering och databaser, 7.5 hp<br>
                     Systemutvecklingsprojekt, 7.5 hp<br>
                     Interaktiva webbapplikationer, 7.5 hp<br>
-                    Analys och design av informationssystem, 15 hp<br>
+                    Analys och design av informationssystem, 15 hp, pågående<br>
                     Vetenskaplig metod, 7.5 hp<br>
+                    Distribuerad Systemutveckling, 7.5 hp, pågående<br />
                     <h4>Datateknik</h4>
                     Datorsystem och programmering, 7.5 hp<br>
-                    Objektorienterad programmering i Java 7.5 hp<br/>
+                    Inledande programmering i Java, 7.5 hp, pågående<br />
+                    Objektorienterad programmering i Java, 7.5 hp, pågående<br/>
                     AI The basics of Artificial Intelligens, 2.0 hp<br>
                     <h4>Energiteknik</h4>
                     Projektbaserad introduktion till ingenjörsarbete, 7.5 hp<br>
