--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -137,7 +137,7 @@
                     </div>
                     <div>
                         <label>Meddelande</label><br>
-                        <textarea id="textarea" placeholder="Mddelande..."></textarea>
+                        <textarea id="textarea" placeholder="Meddelande..."></textarea>
                     </div>
                     <button class="btn_1" type="submit">Skicka</button>
                 </form>
